$Id: History,v 1.48 2002-02-27 15:04:57 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
27 fev 02: mma (stand-V04-00-02)
- V.Ivanchenko remove the fix for GenericIons in G4VhEnergyLoss, G4hIonisation;

27 fev 02: mma (stand-V04-00-01)
- V.Ivanchenko fix G4VhEnergyLoss, G4hIonisation for GenericIons;
- G4VeEnergyLoss and G4VhEnergyLoss : error in TouchebleHandle - take from 
  PreStepPoint  
     
10 fev 02: mma (stand-V04-00-00)
- G4VeEnergyLoss and G4VhEnergyLoss : error in SetMindeltaCutInRange,
  was set in Energy !  
     
11 jan 02: mma
- gammaConversion::ComputeCrossSection(): correction of extrapolation below 
  EnergyLimit
        
10 jan 02: mma 
- photoEffect: rearrangement in the inlined functions
     
12 nov 01: mma (stand-V03-02-14)
- ParticleMass and Charge : local variables
- merge 11a + 13
- some cleanup in G4hEnergyLoss.hh and .cc 
     
29 oct 01: mma (stand-V03-02-13)
- all static functions no more inlined
     
23 oct 01: mma (stand-V03-02-12)
- cut per material: Ve(h)EnergyLoss, e(h)Ionisation, eBremsstrahlung,
  PAIEnergyLoss, PAIonisation, SynchrotronRadiation     

08 nov 01: G.Cosmo (stand-V03-02-11a)