@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4GammaConversion.cc,v 1.15 2002-02-11 15:09:01 maire Exp $
+// $Id: G4GammaConversion.cc,v 1.16 2002-03-21 16:28:08 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //------------------ G4GammaConversion physics process -------------------------
@@ -53,7 +53,8 @@
 // 17-09-01 migration of Materials to pure STL (mma)
 // 20-09-01 DoIt: fminimalEnergy = 1*eV (mma)
 // 01-10-01 come back to BuildPhysicsTable(const G4ParticleDefinition&)
-// 11-01-02 ComputeCrossSection: correction of extrapolation below EnergyLimit        
+// 11-01-02 ComputeCrossSection: correction of extrapolation below EnergyLimit
+// 21-03-02 DoIt: correction of the e+e- angular distribution (bug 363) mma        
 // -----------------------------------------------------------------------------
 
 #include "G4GammaConversion.hh"
@@ -327,24 +328,26 @@ G4VParticleChange* G4GammaConversion::PostStepDoIt(const G4Track& aTrack,
    if (9./(9.+d) >G4UniformRand()) u= - log(G4UniformRand()*G4UniformRand())/a1;
    else                            u= - log(G4UniformRand()*G4UniformRand())/a2;
 
-   G4double Teta = u*electron_mass_c2/GammaEnergy;
+   G4double TetEl = u*electron_mass_c2/ElectTotEnergy;
+   G4double TetPo = u*electron_mass_c2/PositTotEnergy;
    G4double Phi  = twopi * G4UniformRand();
-   G4double dirx=sin(Teta)*cos(Phi), diry=sin(Teta)*sin(Phi), dirz=cos(Teta);
- 
+   G4double dxEl= sin(TetEl)*cos(Phi),dyEl= sin(TetEl)*sin(Phi),dzEl=cos(TetEl);
+   G4double dxPo=-sin(TetPo)*cos(Phi),dyPo=-sin(TetPo)*sin(Phi),dzPo=cos(TetPo);
+   
    //
    // kinematic of the created pair
    //
    // the electron and positron are assumed to have a symetric
    // angular distribution with respect to the Z axis along the parent photon.
 
-   aParticleChange.SetNumberOfSecondaries(2) ; 
+   aParticleChange.SetNumberOfSecondaries(2); 
 
    G4double ElectKineEnergy = G4std::max(0.,ElectTotEnergy - electron_mass_c2);
    G4double localEnergyDeposit = 0.;
 
    if (ElectKineEnergy > fminimalEnergy)
      {
-       G4ThreeVector ElectDirection (dirx, diry, dirz);
+       G4ThreeVector ElectDirection (dxEl, dyEl, dzEl);
        ElectDirection.rotateUz(GammaDirection);   
  
        // create G4DynamicParticle object for the particle1  
@@ -361,7 +364,7 @@ G4VParticleChange* G4GammaConversion::PostStepDoIt(const G4Track& aTrack,
    if (PositKineEnergy < fminimalEnergy)
      { localEnergyDeposit += PositKineEnergy; PositKineEnergy = 0.;}
 
-   G4ThreeVector PositDirection (-dirx, -diry, dirz);
+   G4ThreeVector PositDirection (dxPo, dyPo, dzPo);
    PositDirection.rotateUz(GammaDirection);   
  
    // create G4DynamicParticle object for the particle2 
