@@ -1,4 +1,4 @@
-$Id: History,v 1.48 2002-02-27 15:04:57 maire Exp $
+$Id: History,v 1.49 2002-03-21 16:28:06 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+21 mar 02: mma (stand-V04-00-03)
+- G4GammaConversion::DoIt() correction of e+e- angular distribution (bug 363)
      
 27 fev 02: mma (stand-V04-00-02)
 - V.Ivanchenko remove the fix for GenericIons in G4VhEnergyLoss, G4hIonisation;
